--- a/CD.lflist.conf
+++ b/CD.lflist.conf
@@ -60,6 +60,7 @@
 11790356 0 --Buster Dragon
 76218313 0 --Dragon Buster Destruction Sword
 75286621 0 --Invoked Mechaba
+79059098 0 --Prank-Kids Pandemonium
 
 #Limited Chaos Draft					
 69207766 1 --Inzektor Hornet
