--- a/CD.lflist.conf
+++ b/CD.lflist.conf
@@ -61,6 +61,8 @@
 76218313 0 --Dragon Buster Destruction Sword
 75286621 0 --Invoked Mechaba
 79059098 0 --Prank-Kids Pandemonium
+55623480 0 --Fairy Tail - Snow
+38572779 0 --Miscellaneousaurus
 
 #Limited Chaos Draft					
 69207766 1 --Inzektor Hornet
