--- a/CD.lflist.conf
+++ b/CD.lflist.conf
@@ -63,6 +63,8 @@
 79059098 0 --Prank-Kids Pandemonium
 55623480 0 --Fairy Tail - Snow
 38572779 0 --Miscellaneousaurus
+44009443 0 --Orbital Hydralander
+74191942 0 --Painful Choice
 
 #Limited Chaos Draft					
 69207766 1 --Inzektor Hornet
