--- a/CD.lflist.conf
+++ b/CD.lflist.conf
@@ -65,6 +65,8 @@
 38572779 0 --Miscellaneousaurus
 44009443 0 --Orbital Hydralander
 74191942 0 --Painful Choice
+60461804 0 --Destiny HERO - Destroyer Phoenix Enforcer
+38179121 0 --Double Evolution Pill
 
 #Limited Chaos Draft					
 69207766 1 --Inzektor Hornet
