--- a/CD.lflist.conf
+++ b/CD.lflist.conf
@@ -67,6 +67,8 @@
 74191942 0 --Painful Choice
 60461804 0 --Destiny HERO - Destroyer Phoenix Enforcer
 38179121 0 --Double Evolution Pill
+94192409 0 --Compulsory Evacuation Device
+90590303 0 --Bagooska the Terribly Tired Tapir
 
 #Limited Chaos Draft					
 69207766 1 --Inzektor Hornet
