--- a/CD.lflist.conf
+++ b/CD.lflist.conf
@@ -1,17 +1,12 @@
 #[Chaos Draft]
-!Chaos Draft
-#Forbidden Chaos Draft
+!Chaos Draft 5
+#Forbidden Chaos Draft 5
 55285840 0 --Time Thief Redoer
 94689206 0 --Block Dragon
-34206604 0 --Magical Scientist
-7563579 0 --Performage PlushFire
-9929398 0 --Blackwing - Gofu the Vague Shadow
+7563579 0 --Performage Plushfire
 23434538 0 --Maxx "C"
-10389142 0 --Number 42: Galaxy Tomahawk
 3679218 0 --Knightmare Mermaid
-24094258 0 --Heavymetalfoes Electrumite
 70369116 0 --Predaplant Verte Anaconda
-67616300 0 --Chicken Game
 17375316 0 --Confiscation
 42703248 0 --Giant Trunade
 79571449 0 --Graceful Charity
@@ -20,24 +15,15 @@
 93016201 0 --Royal Oppression
 5851097 0 --Vanity's Emptiness
 61740673 0 --Imperial Order
-53582587 0 --Torrential Tribute
 27548199 0 --Borreload Savage Dragon
-72989439 0 --Black Luster Soldier - Envoy of the Beginning
-55787576 0 --World Legacy - "World Shield"
 15693423 0 --Evenly Matched
 82385847 0 --Dinowrestler Pankratops
-95440946 0 --Eldlich the Golden Lord
-74752631 0 --Battle Shogun of the Six Samurai
-36668118 0 --Boot Sector Launch
 73356503 0 --Barrier Statue of the Stormwinds
 69448290 0 --Mist Valley Thunderbird
 12580477 0 --Raigeki
 4280258 0 --Apollousa, Bow of the Goddess
-90809975 0 --Toadally Awesome
 14558127 0 --Ash Blossom & Joyous Spring
-2819435 0 --Pacifis, the Phantasm City
 76375976 0 --Mystic Mine
-1561110 0 --ABC-Dragon Buster
 83190280 0 --Lunalight Tiger
 13035077 0 --Dragonic Diagram
 50588353 0 --Crystron Halqifibrax
@@ -49,44 +35,41 @@
 62517849 0 --Number 39: Utopia Double
 56832966 0 --Number S39: Utopia the Lightning
 61399402 0 --Light Dragon @Ignister
-08662794 0 --Codebreaker Zero Day
-58984738 0 --Dinomight Knight, the True Dracofighter
-15397015 0 --Inspector Boarder
 53334471 0 --Gozen Match
-26692769 0 --The Phantom Knights of Rusty Bardiche
 85289965 0 --Borrelsword Dragon
-66957584 0 --Infernity Launcher
 94977269 0 --El Shaddoll Winda
-11790356 0 --Buster Dragon
 76218313 0 --Dragon Buster Destruction Sword
 75286621 0 --Invoked Mechaba
-79059098 0 --Prank-Kids Pandemonium
 55623480 0 --Fairy Tail - Snow
-38572779 0 --Miscellaneousaurus
 44009443 0 --Orbital Hydralander
 74191942 0 --Painful Choice
-60461804 0 --Destiny HERO - Destroyer Phoenix Enforcer
-38179121 0 --Double Evolution Pill
 94192409 0 --Compulsory Evacuation Device
 90590303 0 --Bagooska the Terribly Tired Tapir
-
-#Limited Chaos Draft					
-69207766 1 --Inzektor Hornet
-87209160 1 --Tri-Brigade Fraktall
-61529473 1 --True Draco Apocalypse
-64280356 1 --Kozmo Tincan
-28985331 1 --Armageddon Knight
-38761908 1 --Paleozoic Dinomischus
-25789292 1 --Forbidden Chalice
-66451379 1 --Graydle Alligator
-29834183 1 --Graydle Eagle
-40605147 1 --Solemn Strike
-83764718 1 --Monster Reborn
-36975314 1 --Crackdown
-
-#Semi-Limited Chaos Draft
-81674782 2 --Dimensional Fissure
-32807846 2 --Reinforcement of the Army
-27780618 2 --Vision HERO Vyon
-67723438 2 --Emergency Teleport
-14087893 2 --Book of Moon
+21887175 0 --Mekk-Knight Crusadia Avramax
+89399912 0 --Tempest, Dragon Ruler of Storms
+70828912 0 --Premature Burial
+40605147 0 --Solem Strike
+30241314 0 --Macro Cosmos
+69207766 0 --Inzektor Hornet
+90448279 0 --Divine Arsenal AA Zeus - Sky Thunder
+24224830 0 --Called By the Grave
+42829885 0 --Forceful Sentry
+64697231 0 --Trap Dustshoot
+82301904 0 --Chaos Emperor Dragon - Envoy of the End
+90846359 0 --Rivalry of Warlords
+35059553 0 --Kaiser Colosseum
+74586817 0 --Psy-Framelord Omega
+61529473 0 --True Draco Apocalypse
+92731385 0 --Tearlaments Kitkallos
+53129443 0 --Dark Hole
+21377582 0 --Master Peace, the True Dracoslaying King
+18144506 0 --Harpie's Feather Duster
+83555666 0 --Ring of Destruction
+77565204 0 --Future Fusion
+36975314 0 --Crackdown
+95027497 0 --Ninja Grandmaster Hanzo
+78872731 0 --Zoodiac Ratpier
+34086406 0 --Lavalval Chain
+31178212 0 --Majespecter Unicorn - Kirin
+63767246 0 --Number 38: Hope Harbinger Dragon Titanic Galaxy
+57728570 0 --Crush Card Virus
