--- a/CD.lflist.conf
+++ b/CD.lflist.conf
@@ -73,3 +73,4 @@
 31178212 0 --Majespecter Unicorn - Kirin
 63767246 0 --Number 38: Hope Harbinger Dragon Titanic Galaxy
 57728570 0 --Crush Card Virus
+53334471 0 --Gozen
